--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   web:
-    build: .
+    image: "acinesi/covid-web-server:latest"
     ports:
       - "5000:5000"
     volumes:
